# zero2prod

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-0851bf5e8d147f0ace037c6f434bcc4e04d330e3c4259ef8c8097e61f77b64e2.json  query-73e860fdeed4040b0b15e737d54d30cfde303642a4bd6ec4877c69ad3d79b466.json  query-9f98545cd8d747f36816c48ed019621468f6adce5b502cf77a8bb1183a5933fe.json
configuration/: base.yaml  production.yaml
migrations/: 20240310125058_create_subscriptions_table.sql  20240330210240_add_status_to_subcriptions.sql  20240330213001_make_status_not_null_in_subscriptions.sql  20240330214129_create_subscription_tokens_table.sql  20240412200330_create_users_table.sql  20240419111310_seed_user.sql  20250412160724_create_idempotency_table.sql  20250413121925_relax_null_checks_on_idempotency.sql
scripts/: init_db.sh  init_postgres.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
templates/: dashboard.html  login.html  newsletter.html  password.html
tests/: test_health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
