[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.10", features = ["redis-session-native-tls"] }
actix-web = "4.10"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "=0.5.3", features = ["std"] }
askama = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claims = "0.8"
config = "0.15"
rand = { version = "=0.8.5", features = ["std_rng"] } # TODO: wait argon2 to update its `rand` dependencies
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.7"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12"
uuid = { version = "1.16", features = ["v4", "serde"] }
validator = "0.20"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
fake = "=3.1.0" # TODO: wait argon2 to update its `rand` dependencies
linkify = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
serde_urlencoded = "0.7"
wiremock = "0.6"
